--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.url=jdbc:sqlite:sample.db
 quarkus.datasource.jdbc.min-size=1
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.vertx.event-loops-pool-size=2
+quarkus.thread-pool.core-threads=4
+quarkus.thread-pool.max-threads=8
